## Process this file with automake to produce Makefile.in
## Copyright Robin Rowe 3/22/04 MIT OSI License

EXTRA_DIST = \
	gimp1.2.h \
	gimpcompat.h \
	gimp.h \
	gimpintl.h.in \
	gimpmath.h \
	gimpui.h \
	stdplugins-intl.h


library_includedir=${pkgincludedir}/libgimp
library_include_HEADERS = $(wildcard *.h)
