brushdatadir = $(programdatadir)/brushes

brushdata =
curvedata =
gradientdata =
palettedata =
patterndata =

brushdata_DATA = @brushdata@

EXTRA_DIST = $(brushdata_DATA)

.PHONY: files

FILES	=\
	10x10square.gbr	\
	10x10squareBlur.gbr	\
	11circle.gbr	\
	11fcircle.gbr	\
	13circle.gbr	\
	13fcircle.gbr	\
	15circle.gbr	\
	15fcircle.gbr	\
	17circle.gbr	\
	17fcircle.gbr	\
	19circle.gbr	\
	19fcircle.gbr	\
	1circle.gbr	\
	20x20square.gbr	\
	20x20squareBlur.gbr	\
	3circle.gbr		\
	3fcircle.gbr		\
	5circle.gbr		\
	5fcircle.gbr		\
	5x5square.gbr		\
	5x5squareBlur.gbr	\
	7circle.gbr		\
	7fcircle.gbr		\
	9circle.gbr		\
	9fcircle.gbr		\
	callig1.gbr		\
	callig2.gbr		\
	callig3.gbr		\
	callig4.gbr		\
	confetti.gbr		\
	dunes.gbr		\
	galaxy.gbr		\
	galaxy_big.gbr		\
	galaxy_small.gbr	\
	pixel.gbr		\
	thegimp.gbr		\
	xcf.gbr			\
	10x10square16.gbr	\
	10x10squareBlur16.gbr	\
	11circle16.gbr	\
	13circle16.gbr	\
	15circle16.gbr	\
	17circle16.gbr	\
	19circle16.gbr	\
	1circle16.gbr	\
	20x20square16.gbr	\
	20x20squareBlur16.gbr	\
	3circle16.gbr		\
	5circle16.gbr		\
	5x5square16.gbr		\
	5x5squareBlur16.gbr	\
	7circle16.gbr		\
	9circle16.gbr		\
	callig116.gbr		\
	callig216.gbr		\
	callig316.gbr		\
	callig416.gbr		\
	confetti16.gbr		\
	dunes16.gbr		\
	galaxy16.gbr		\
	galaxy_big16.gbr	\
	galaxy_small16.gbr	\
	pixel16.gbr		\
	thegimp16.gbr		\
	xcf16.gbr
	10x10squaref16.gbr	\
	10x10squareBlurf16.gbr	\
	11circlef16.gbr	\
	13circlef16.gbr	\
	15circlef16.gbr	\
	17circlef16.gbr	\
	19circlef16.gbr	\
	1circlef16.gbr	\
	20x20squaref16.gbr	\
	20x20squareBlurf16.gbr	\
	3circlef16.gbr		\
	5circlef16.gbr		\
	5x5squaref16.gbr	\
	5x5squareBlurf16.gbr	\
	7circlef16.gbr		\
	9circlef16.gbr		\
	callig1f16.gbr		\
	callig2f16.gbr		\
	callig3f16.gbr		\
	callig4f16.gbr		\
	confettif16.gbr		\
	dunesf16.gbr		\
	galaxyf16.gbr		\
	galaxy_bigf16.gbr	\
	galaxy_smallf16.gbr	\
	pixelf16.gbr		\
	thegimpf16.gbr		\
	xcff16.gbr
